# genealogy

./: .env.example  .gitignore  ACCURACY_REPORT_v2.txt  CLAUDE.md  FINAL_ACCURACY_REPORT.md  GEDCOM_IMPORT_BUGS.md  GEMINI.md  Makefile  NEXT_STEPS.txt  OCR_ISSUES_README.txt  OLLAMA_SETUP.md  OPENROUTER_GUIDE.md  README.md  TESTING_SETUP_COMPLETE.md  TODO.md  UNIQUE_ID_HANDLING.md  analyze_orphan_types.py  apply_all_ocr_fixes.py  backend_logs.txt  calculate_true_accuracy.py  check_accuracy_v2.py  combined_newcomb_hull.ged  docker-compose.dev.yml  docker-compose.yml  fix_generation_markers.py  fix_ocr_errors_batch2.py  generate_problematic_lines_v2.py  john_cowan.ged  list_openrouter_models.py  ocr_issues_summary.csv  ocr_issues_summary_v2.csv  problematic_lines.csv  problematic_lines_v2.csv  reload_source.py  start_app.bat  test_full_pipeline.py  test_openrouter.py  test_parsing_only.py  unified_family_tree.ged
backend/: Dockerfile  pyproject.toml  test_gedcom_import.py
backend/alembic/: env.py
backend/alembic/versions/: 30a96be3d8f0_create_initial_tables.py  69f73a5ec106_add_hybrid_ocr_fields_to_pagetext.py  b1f2e3d4c5a6_add_confidence_to_pagetext.py  c6d7e8f9a0b1_add_stage_to_source.py
backend/app/: db.py  main.py
backend/app/api/: admin.py  export.py  families.py  files.py  import.py  ocr.py  parse.py  people.py  project.py  validation.py
backend/app/core/: gedcom.py  llm_parser.py  models.py  ocr_runner.py  ollama_helper.py  parser.py  settings.py  validator.py
backend/tests/: test_gedcom_import.py  test_imports.py  test_models_upsert.py  test_ocr_cmd.py  test_parser.py  test_parser_gen_scribble_prefix.py
frontend/: Dockerfile  TESTING.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vitest.config.ts
(+40 files in other folders)
