[project]
name = "genealogy-backend"
version = "0.1.0"
description = "Local genealogy OCR and GEDCOM export backend"
authors = [{ name = "GenealogyApp", email = "support@example.com" }]
readme = "../README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.16",
    "sqlalchemy>=2.0",
    "pydantic>=1.10,<2.0",
    "python-multipart>=0.0.7",
    "pypdf>=4.0",
    "ged4py>=1.5",
    "orjson>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
