[project]
name = "genealogy-backend"
version = "0.1.0"
description = "Local genealogy OCR and GEDCOM export backend"
authors = [{ name = "GenealogyApp", email = "support@example.com" }]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<0.118",
    "uvicorn[standard]>=0.30",
    "sqlmodel>=0.0.25",
    "sqlalchemy>=2.0",
    "pydantic>=2.6,<3",
    "pydantic-settings>=2.2,<3",
    "python-multipart>=0.0.7",
    "pypdf>=4.0",
    "ged4py==0.5.2",
    "orjson>=3.9",
    "alembic>=1.13",
    "pdf2image>=1.16",
    "pytesseract>=0.3.10",
    "Pillow>=10.0",
    "jellyfish>=1.0",
    "ollama>=0.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-asyncio>=0.23",
    "httpx>=0.25",
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app", "app.*"]
